<resources>
    <string name="app_name">PageTurning</string>
    <string name="please_input_content">请输入正文(若想换行输入:nnn)</string>
    <string name="please_input_altogether_time">(总播放时间)</string>
    <string name="time">时间(秒) : </string>
    <string name="star_play_content">开始播放</string>
    <string name="text_size">字体大小 : </string>
    <string name="please_input_text_size">字号(正整数)</string>
    <string name="input_six_number_rgb_color">(6位数的RGB整数)</string>
    <string name="play_over_finish_app">播放完毕关闭APP</string>
    <string name="reset_default_setting">恢复默认设置</string>
    <string name="text_color">字体颜色 : </string>
    <string name="page_background_color">背景颜色 : </string>
    <string name="sure">确定</string>
    <string name="play_mode">播放模式 : </string>
    <string name="play_mode_auto">自动</string>
    <string name="play_mode_manual">手动</string>
    <string name="page_preview_text">文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本</string>
    <string name="default_play_time">15</string>
    <string name="default_play_text_size">10</string>
    <string name="default_play_text_color">333333</string>
    <string name="default_play_back_ground_color">DDDDDD</string>
    <string name="default_play_text_color_complete">#FF333333</string>
    <string name="default_play_back_ground_color_complete">#FFDDDDDD</string>
</resources>
